# map_diffusion

./: .gitignore  .pdm.toml  Dockerfile  README.md  caption_ds.py  config.py  dataset.py  dataset_lighting.py  diff_hugging.py  diff_simple.py  diffusion_multinomial.py  get_embeddings.ipynb  get_tiles.ipynb  hf_dataset.ipynb  merge_tiles.ipynb  my_multinomial.py  nn.py  osm_dataset.py  projekt_n_w_test.ipynb  pyproject.toml  requirements.txt  run.sh  sentence_gen.ipynb  stable_example.ipynb  tabular_data.ipynb  test_finetune.ipynb  train.py  train_text_to_image.py  vector_tile_loader.py
EDA/: cities.ipynb  dataset.ipynb  mvt_token_size.ipynb  tags.ipynb
EDA/mvt_content/: complex_geometry.ipynb  layers.ipynb  numbers.ipynb
EDA/test-mvt/: 34103_23065.json  34103_23065.mvt  35068_24354.json  35068_24354.mvt  35411_25758.json  35411_25758.mvt  read_mvt.ipynb
EDA/test-npm/: 35068_24354.json  file.json  file2.json  main.js  package-lock.json  package.json
app/: Dockerfile
map_generation/: caption_ds.py  celebA_results.ipynb  classifier_free.py  config.py  dataset_lighting.py  def_model.ipynb  diff_hugging.py  get_tiles.ipynb  get_vector_tiles.ipynb  hf_dataset.ipynb  merge_tiles.ipynb  nn.py  osm_dataset.py  test_finetune.ipynb  textual_inversion.py  tile_merging.py  train.py  train_text_to_image.py  train_text_to_image_lora.py  vector_tile_data_collector.py
map_generation/EDA/: caption_from_vector_tiles.ipynb  cities.ipynb  mvt_token_size.ipynb  vector_size.ipynb
map_generation/app/: app.py  model_wrapper.py
map_generation/masks/: building_mask.py  mask_dataset.py  model.py
workflow_raster/: 1.get_tiles.ipynb  2.get_embeddings.ipynb  3.hf_dataset.ipynb  4.finetune.ipynb  4.train_colab.ipynb  6.building_mask.ipynb  6.segmentation.ipynb  7.diffusionn_results.ipynb  7.evaluation.ipynb  config.py
workflow_raster/.ipynb_checkpoints/: 4.finetune-checkpoint.ipynb
