[tool.pdm]

[project]
name = "map_generation"
version = "0.0.1"
description = "TODO"
authors = [
    {name = "mprzymus", email = "pzrymus@gmail.com"},
]
dependencies = [
    "torch",
    "diffusers>=0.16.0",
    "transformers",
    "datasets>=2.11.0",
    "torchvision",
    "denoising-diffusion-pytorch",
    "pytorch-lightning",
    "requests",
    "mapbox-vector-tile>=1.2.1",
    "accelerate>=0.18.0",
    "protobuf==3.20.3",
    "tensorboard>=2.12.2",
    "srai==0.1.1",
    "notebook>=6.5.4",
    "vt2geojson>=0.2.1",
    "momepy>=0.5.4",
    "matplotlib>=3.7.1",
    "black>=23.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
