[tool.pdm]

[project]
name = "map_generation"
version = "0.0.1"
description = "TODO"
authors = [
    {name = "mprzymus", email = "pzrymus@gmail.com"},
]
dependencies = [
    "torch",
    "diffusers>=0.16.0",
    "transformers",
    "datasets>=2.11.0",
    "torchvision",
    "denoising-diffusion-pytorch",
    "pytorch-lightning",
    "requests",
    "mapbox-vector-tile>=1.2.1",
    "accelerate>=0.20.3",
    "protobuf==3.20.3",
    "tensorboard>=2.12.2",
    "notebook>=6.5.4",
    "vt2geojson>=0.2.1",
    "momepy>=0.5.4",
    "matplotlib>=3.7.1",
    "black>=23.3.0",
    "ipywidgets==7.7.2",
    "folium>=0.14.0",
    "mapclassify>=2.5.0",
    "plotly>=5.14.1",
    "pyfunctional>=1.4.3",
    "torchmetrics>=0.11.4",
    "opencv-python>=4.7.0.72",
    "srai[osm]>=0.1.1",
    "geopandas>=0.13.2",
    "pandas>=2.0.2",
    "shapely>=2.0.1",
    "numpy>=1.24.3",
    "torch-fidelity>=0.3.0",
    "osmnx==1.4.0",
    "pycountry-convert>=0.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
prod = [
    "streamlit>=1.23.1",
    "stqdm>=0.0.5",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
